--- a/PadrinhosMagicosT3/assets/css/style.css
+++ b/PadrinhosMagicosT3/assets/css/style.css
@@ -65,6 +65,10 @@ main {
   color: #fff;
 }
 
+body {
+  background-color: #000;
+}
+
 .caixaTitulo {
   display: flex;
   justify-content: space-around;
@@ -93,7 +97,28 @@ main {
 .caixaEp section img {
   width: 25vw;
   border-radius: 3px;
-  display: block;
+}
+
+.card-image {
+  display: inline-block;
+  position: relative;
+}
+.card-image .overlay-card {
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  transition: 0.3s;
+  font-weight: bold;
+}
+.card-image .overlay-card:hover {
+  opacity: 0.6;
+  border: 1px solid #DF0712;
 }
 
 a {
@@ -105,12 +130,11 @@ a {
 footer {
   display: flex;
   height: 9.2vh;
-  align-items: center;
+  align-items: flex-end;
   justify-content: flex-start;
   gap: 2em;
   font-weight: bold;
   padding: 0 2vw;
-  background-color: #000;
 }
 
 @media (max-width: 900px) {
