--- a/PadrinhosMagicosT3/assets/css/style.scss
+++ b/PadrinhosMagicosT3/assets/css/style.scss
@@ -69,6 +69,10 @@ main{
     color: #fff;
 }
 
+body{
+    background-color: #000;
+}
+
 .caixaTitulo{
     display: flex;
     justify-content: space-around;
@@ -95,8 +99,29 @@ main{
         img{
             width: 25vw;
             border-radius: 3px;
-            display: block;
         }
+    }
+}
+
+.card-image{
+    display: inline-block;
+    position: relative;
+    .overlay-card{
+        background-color: #000;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        opacity: 0;
+        transition: 0.3s;
+        font-weight: bold;
+    }
+    .overlay-card:hover{
+        opacity: 0.6;
+        border: 1px solid #DF0712;
     }
 }
 
@@ -109,12 +134,11 @@ a{
 footer{
     display: flex;
     height: 9.2vh;
-    align-items: center;
+    align-items: flex-end;
     justify-content: flex-start;
     gap: 2em;
     font-weight: bold;
     padding: 0 2vw;
-    background-color: #000;
 }
 
 // responsivo
